--- a/weather_API/index.html
+++ b/weather_API/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather API</title>
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <center id="bg_color">
@@ -17,4 +17,4 @@
     <div id="main"></div>
 </body>
 </html>
-<script src="weather.js"></script>
+<script src="index.js"></script>
