--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/thumbnails/024/781/338/small/coffee-emoji-cup-with-eyes-kawaii-cup-element-for-menu-emoji-icon-free-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Coofee</title>
 
     <link rel="stylesheet" href="index.css">
 
